--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 15.235.166.218 www.growtopia1.com
 15.235.166.218 www.growtopia2.com
 15.235.166.218 RvLnd.here
-        </pre>
+        </code>
     </div>
 
 </body>
